# ai-novels

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.ai  Dockerfile.backend  Dockerfile.frontend  MEMORY.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start_server.py  简历模板.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
bff/: package.json
bff/src/: app.module.ts  main.ts
config/: generation.json.template  messaging.json.template  server.json.template
config/prometheus/: prometheus.yml
frontend/: package-lock.json  package.json
frontend/src/: main.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml
scripts/: manage-server.sh  restart-server.bat  run_server.py  server-manager.ps1  start_phase1.sh  start_server_simple.py
scripts/test/: run_e2e_test.ps1  run_health_check.ps1  run_health_check.py  run_tests.ps1  run_tests.py  run_tests_with_coverage.ps1
src/ai_novels/: __init__.py
src/deepnovel/: __init__.py
tests/: test_e2e.py
tests/test_agents/: test_base.py  test_character_generator.py  test_config_enhancer.py  test_content_generator.py  test_health_checker.py  test_memory_tools.py  test_outline_planner.py  test_persistence.py  test_pipeline.py  test_prompt_composer.py  test_quality_checker.py  test_task_manager.py  test_task_orchestrator.py  test_tool_enabled_agent.py  test_tool_registry.py  test_world_simulation_tools.py
tests/test_api/: test_agent_routes.py  test_config_routes.py  test_dependencies.py  test_health_routes.py  test_middleware.py  test_routes.py  test_task_routes.py  test_v2_integration.py
tests/test_config/: test_app_config.py  test_app_integration.py  test_config_hub.py  test_novel_config.py  test_validators.py
tests/test_core/: test_context.py  test_context_manager.py  test_di_container.py  test_event_bus.py  test_exceptions.py  test_memory.py  test_memory_context.py  test_performance_monitor.py  test_redis_event_bus.py  test_working_memory.py
(+298 files in other folders)
