[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-novels"
version = "2.0.0"
description = "AI小说生成系统后端 — AI-powered novel generation platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AI-Novels Team" },
]
keywords = ["novel", "ai", "generation", "writing", "fastapi", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.9",
    "openai==1.12.0",
    "ollama==0.1.6",
    "google-generativeai==0.3.2",
    "minimax==0.0.10",
    "dashscope==1.14.1",
    "pymysql==1.1.0",
    "pymongo==4.6.1",
    "neo4j==5.18.0",
    "chromadb==0.4.24",
    "sqlalchemy==2.0.25",
    "asyncpg==0.31.0",
    "sqlmodel==0.0.38",
    "alembic==1.18.4",
    "rocketmq-client-python==2.0.0",
    "redis==5.0.1",
    "structlog==24.1.0",
    "langchain==0.1.0",
    "langchain-community==0.0.26",
    "python-dotenv==1.0.0",
    "psutil==5.9.8",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "uuid==1.30",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/Laihuiwen/AI-Novels"
Repository = "https://github.com/Laihuiwen/AI-Novels"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_novels*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ai_novels"]
